--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.21.1
   google_fonts: ^3.0.1
+  image_picker: ^0.8.5+3
+  firebase_auth: ^3.7.0
+  provider: ^6.0.3
+  carousel_slider: ^4.1.1
+  dotted_border: ^2.0.0+2
+  textfield_tags: ^2.0.1
+  file_picker: ^3.0.4
+  shared_preferences: ^2.0.15
+  cloudinary_public: ^0.12.0
+  cached_network_image:
 
 dev_dependencies:
   flutter_test:
